eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-api-service
  namespace: default
spec:
  selector:
    app: bank-api-deployment
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: bank-api-service
    protocol: TCP
    port: 80
    targetPort: 8080
