eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: "api.bankocorp.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bank-api-service
                port:
                  number: 80
